# NEXTPOS-Business-Suite

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  validate_costing.js  vite.config.ts  worker-configuration.d.ts
.github/workflows/: deploy.yml  release.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-21.jsonl  tmux-hook-2026-04-22.jsonl  tmux-hook-2026-04-23.jsonl  turns-2026-04-21.jsonl  turns-2026-04-22.jsonl  turns-2026-04-23.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
src/: app.css  app.d.ts  app.html  hooks.server.ts  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: db.ts  platform.ts  syncManager.ts
src/lib/api/: hr.ts  mock-data.ts  products.ts  tenant.ts
src/lib/components/: DeliveryModal.svelte  PosSidebar.svelte  PwaInstallPrompt.svelte  ThemeSwitcher.svelte  UserSwitcher.svelte
src/lib/i18n/: en.ts  index.svelte.ts  my.ts
src/lib/stores/: auth.svelte.ts  cart.svelte.ts  cartStore.js  counterStore.svelte.ts  deliveryStore.svelte.ts  ecommerceStore.svelte.ts  featureStore.js  peopleStore.svelte.ts  (+6 more)
src/routes/: +layout.svelte  +layout.ts
static/: manifest.webmanifest
worker/: .dev.vars  index.ts  inversify.config.ts  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
worker/migrations/: 0001_initial.sql  0002_auth_licensing.sql  0003_sales_costing.sql  0004_delivery_service_management.sql  0005_hr_payroll.sql
worker/src/: interfaces.ts  inversify.config.ts  types.ts
(+40 files in other folders)
