[package]
name = "kt-pos"
version = "0.0.1"
description = "KT POS Business Suite - Cross-platform POS Application"
authors = ["KT POS Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
sha2 = "0.10"
mac_address = "1.1"
hostname = "0.4"
